tests/error/struct_errors/invalid_instantiate1.err
Error: Missing type arguments (at $FILE:17:11)
   | 
15 | 
16 | @guppy(module)
17 | def foo(s: MyStruct) -> None:
   |            ^^^^^^^^ Missing type argument for type `MyStruct` (expected 1, got
   |                     0)

Guppy compilation failed due to 1 previous error
